# Praktika

./: CMakeLists.txt  main.cpp
Control/: CMakeLists.txt  Control.cpp  Control.h
Mechanichs/: CMakeLists.txt  Mechanichs.cpp  Mechanichs.h
Objects/: Building.h  CMakeLists.txt  Resource.cpp  Resource.h  Trajectory.h
